<resources>
    <string name="app_name" translatable="false">BluetoothDrop</string>
    <string name="navigation_explorer">Explorer</string>
    <string name="navigation_friends">Friends</string>
    <string name="navigation_settings">Settings</string>
    <string name="bar_about">About</string>
    <string name="button_select_all">Select All</string>
    <string name="bar_sort">Sorting</string>
    <string name="bar_select">Select</string>
    <string name="sizeUnits_byte">B</string>
    <string name="sizeUnits_kilobyte">kB</string>
    <string name="sizeUnits_megabyte">MB</string>
    <string name="sizeUnits_gigabyte">GB</string>
    <string name="sizeUnits_terabyte">TB</string>
    <string name="imageButton_up">Up</string>
    <string name="imageButton_refresh">Refresh</string>
    <string name="imageButton_home">Home</string>
    <string name="error" translatable="false">Error</string>
    <string name="list_preview">Preview</string>
    <string name="spinner_selectedFiles">Selected Files</string>
    <string name="text_about">This programm created by DemetriouS in 2019.</string>
    <string name="sort_date">by date</string>
    <string name="sort_name">by name</string>
    <string name="sort_size">by size</string>
    <string name="sort_asc">ascending</string>
    <string name="sort_desc">descending</string>
    <string name="select_select">Select</string>
    <string name="select_unselect">Unselect</string>
    <string name="select_invert">Invert</string>
    <string name="select_info">Info: enter a regular expression to fine-tune</string>
    <string name="sort_ok">Apply</string>
    <string name="sort_folder">Sort folders separately</string>
    <string name="error_regex">Regular expression not set correctly</string>
    <string name="pattern_data_format">yy.MM.dd HH:mm</string>
    <string name="sort_ignore_case">Ignore Case</string>
    <string name="UUID" translatable="false">fa87c0d0-afac-11de-8a39-0800200c9a66</string>
    <string name="select_clear">Clear</string>
    <string name="select_regex" translatable="false">.*</string>
    <string name="timeUnits_hours">hours</string>
    <string name="timeUnits_minutes">minutes</string>
    <string name="timeUnits_seconds">seconds</string>
    <string name="bluetooth_not_available">Bluetooth module is not available on this device</string>
    <string name="bluetooth_off">Bluetooth is off. Enable it please</string>
    <string name="bluetooth_discoverable_timer">Time remain:</string>
    <string name="load">Downloading</string>
    <string name="button_cancel">Cancel</string>
    <string name="path">Choose Directory</string>
    <string name="send_process">Processing of files</string>
    <string name="error_class">The default value is not an object of class</string>
    <string name="setting_default_path">Default download folder</string>
    <string name="button_change_path">Change</string>
    <string name="setting_discoverable_time">Discoverable time</string>
    <string name="error_empty_send">Can\'t send empty files</string>
    <string name="send_title_receive">Receiving</string>
    <string name="send_title_send">Sending</string>
    <string name="setting_home_path">Home path</string>
    <string name="error_out_of_memory">Can\'t load file: out of memory</string>
    <string name="error_create_file">File is already exist. Transfer is canceled</string>
    <string name="error_create_directory">Can\'t create a folder. Transfer is canceled</string>
    <string name="about_version">Version</string>
    <string name="about_author">Author</string>
    <string name="about_info">Info</string>
</resources>
